<resources>
    <string name="app_name">E-Auction</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latihan">Latihan</string>
    <string name="slogan">Bid, Bid, Bid!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No Account?</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <!--    <string name="rick_roll">We\'re no strangers to love You know the rules and so do I A full commitment\'s what I\'m thinking of You wouldn\'t get this from any other guy I just wanna tell you how I\'m feeling Gotta make you understand Never gonna give you up Never gonna let you down Never gonna run around and desert you Never gonna make you cry Never gonna say goodbye Never gonna tell a lie and hurt you We\'ve known each other for so long Your heart\'s been aching but you\'re too shy to say it Inside we both know what\'s been going on We know the game and we\'re gonna play it And if you ask me how I\'m feeling Don\'t tell me you\'re too blind to see Never gonna give you up Never gonna let you down Never gonna run around and desert you Never gonna make you cry Never gonna say goodbye Never gonna tell a lie and hurt you Never gonna give you up Never gonna let you down Never gonna run around and desert you Never gonna make you cry Never gonna say goodbye Never gonna tell a lie and hurt you Never gonna give, never gonna give (Give you up) (Ooh) Never gonna give, never gonna give (Give you up) We\'ve known each other for so long…</string>-->
    <string name="description">Description</string>
    <string name="latest_bid">Latest Bid</string>
    <string name="add_your_bid">Add your bid</string>
    <string name="bid">bid</string>
    <string name="loading">Please Wait…</string>
    <string name="name">Name</string>
    <string name="origin">Origin</string>
    <string name="register">Register</string>
    <string name="auto">Auto</string>
    <string name="tech">Tech</string>
    <string name="other">Other</string>
    <string name="winning_bid">Winning Bid</string>
    <string name="winning">Winning</string>
    <string name="losing_bid">Losing Bid</string>
    <string name="losing">Losing</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="item_data">Item Data</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="enter_admin_code">Enter Admin Code</string>
    <string name="logging_you_in">Logging you in…</string>
    <string name="login_manual">An error occurred, please login manually</string>
    <string name="email">E-Mail</string>
    <string name="username_error">Username must not be empty.</string>
    <string name="password_error_register">Password must not be empty and at least 8 characters long.</string>
    <string name="name_error">Please insert your name.</string>
    <string name="email_error">Please insert your e-mail correctly.</string>
    <string name="password_error">Password must not be empty</string>
    <string name="wrong_password">Username and Password did not match.</string>
    <string name="auto_login">Performing auto-login…</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="starting_bid">Starting Bid</string>
    <string name="open_price">Open Price (IDR)</string>
    <string name="add_picture">Add Picture</string>
    <string name="request">Request</string>
    <string name="image">Image</string>
    <string name="desc_error">Please insert a description.</string>
    <string name="price_error">Please input an open price.</string>
    <string name="select_image">Please select an image.</string>
    <string name="image_error">Please insert an image</string>
    <string name="request_success">Request uploaded, please wait for it to be approved.</string>
    <string name="request_item">Request item</string>
    <string name="request_item_subtitle">Request item for auction</string>
    <string name="code_error">Error, Code doesn\'t match server\'s code</string>
    <string name="takedown">Takedown</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="requested_by">Requested by</string>
    <string name="starting_at">Starting at %s</string>
    <string name="user_item_request">User Item Request</string>
    <string name="info">Info</string>
    <string name="info_request">Tap on image to select them, then choose accept or decline request</string>
    <string name="title_error">Please insert a title.</string>
    <string name="set_due">Set Due</string>
    <string name="due_error">Please set due for the item(s).</string>
    <string name="items_unselected">Please select the items.</string>
    <string name="username_taken">Username has been taken.</string>
    <string name="email_registered">E-mail already registered, consider logging in.</string>
    <string name="my_bids">My Bids</string>
    <string name="you_bid">You bid %s</string>
    <string name="check">check</string>
    <string name="admin_mode">ADMIN MODE</string>
    <string name="items_approved">Item(s) successfully approved, please wait a moment.</string>
    <string name="bid_success">Bid successfully placed!</string>
    <string name="no_bid">You haven\'t put a bid yet.</string>
    <string name="no_items_up">No Items is up for auction right now, come back later!</string>
    <string name="no_request_available">No request available for now, come back later!</string>
    <string name="no_bid_yet">No bid yet! Add yours now!</string>
    <string name="put_price_higher">Please put price higher than %s</string>
    <string name="input_your_bid">Please input your bid.</string>
    <string name="winner">WINNER</string>
    <string name="lost_bid">LOST BID</string>
    <string name="request_for_auction">Request with open price %s?</string>
    <string name="info_cancel_request_alert">You can cancel it in My Requests if the request isn\'t approved yet.</string>
    <string name="positive_request">Yes!</string>
    <string name="negative_request_alert">No</string>
    <string name="success">Success!</string>
    <string name="uploading_request">Uploading your request</string>
    <string name="ask_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="update">update</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_request">My request(s)</string>
    <string name="origin_error">Please input your origin</string>
    <string name="accept_ask">Accept these item(s)?</string>
    <string name="decline_ask">Decline these item(s)?</string>
    <string name="no_items_report">Nothing here yet, finished items will appear here…</string>
    <string name="finished_at">Finished at %s</string>
    <string name="due_set">Due %s</string>
    <string name="bid_placeholder">Bid %s</string>
    <string name="username_error_chars">Username must be less than 20 chars.</string>
    <string name="bids">Bids</string>
    <string name="closed_no_bids">Closed with no bids:(</string>
</resources>
