<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191923">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bidContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:paddingTop="19dp"
            android:paddingBottom="5dp"
            app:cardBackgroundColor="@color/colorLogoBlue"
            app:cardCornerRadius="19dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/slogan"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/mainWhite" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="48dp"
        android:theme="@style/TextInputMain"
        app:layout_constraintTop_toBottomOf="@+id/bidContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_admin_code"
            android:inputType="text"
            android:textColor="@color/mainWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/actionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/montserrat"
        android:text="@string/register"
        android:textColor="@color/mainWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/codeInputLayout"
        tools:layout_editor_absoluteX="48dp" />

    <ProgressBar
        android:id="@+id/progressBarAdminCode"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/mainWhite"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/actionBtn"
        app:layout_constraintEnd_toEndOf="@+id/actionBtn"
        app:layout_constraintTop_toTopOf="@+id/actionBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
