<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/requestitem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.requestitem.RequestItemFragment">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/pandem_aero"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="18dp"
                android:alpha="0.9"
                app:cardBackgroundColor="@color/colorLogoBlue"
                app:cardCornerRadius="204dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/inputLayout"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="18dp"
                    android:contentDescription="@string/add_picture"
                    android:src="@drawable/ic_add_pic_white" />

                <LinearLayout
                    android:id="@+id/btnAddPic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_yellow"
                    android:orientation="vertical" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:background="@drawable/item_detail_background"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:theme="@style/TextInputMain">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/item_name"
                            android:inputType="text"
                            android:textColor="@color/mainWhite" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:theme="@style/TextInputMain">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/descInput"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:gravity="start"
                            android:hint="@string/item_description"
                            android:inputType="text"
                            android:textColor="@color/mainWhite" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:theme="@style/TextInputMain">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/priceInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/open_price"
                            android:inputType="number"
                            android:textColor="@color/mainWhite" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="18dp">

                        <Button
                            android:id="@+id/btnRequest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_bg"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/request"
                            android:textColor="@color/mainWhite"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ProgressBar
                            android:id="@+id/progressBarRequest"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_margin="8dp"
                            android:elevation="12dp"
                            android:indeterminateTint="@color/mainWhite"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="@id/btnRequest"
                            app:layout_constraintEnd_toEndOf="@+id/btnRequest"
                            app:layout_constraintTop_toTopOf="@id/btnRequest" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
